03-Manifiestos/05-web/01-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vista-deployment
spec:
  selector:
    matchLabels:
      run: vista
  replicas: 3
  template:
    metadata:
      labels:
        run: vista
    spec:
      containers:
      - name: vista
        image: trastolillo/web
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "300Mi"
            cpu: "500m"
          limits:
            memory: "500Mi"
            cpu: "700m"
---
apiVersion: v1
kind: Service
metadata:
  name: vista-svc
  labels:
    run: vista
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    run: vista
